new logo and silo

--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -18,7 +18,7 @@
         .facebook= link_to image_tag("/images/structure/facebook.png"), "http://www.facebook.com/pages/Lunar-Sway/51020740023", :target => "_blank"
         .twitter= link_to image_tag("/images/structure/twitter.png"), "http://twitter.com/lunarsway", :target => "_blank"
         .myspace= link_to image_tag("/images/structure/myspace.png"), "http://www.myspace.com/lunarsway", :target => "_blank"
-        .main-logo= image_tag "/images/structure/logo.jpg"
+        .main-logo= image_tag "/images/structure/logo.png"
         .content
           .logged-in= render :partial => "/home/logged_in"
           = @content_for_layout
