--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -31,6 +31,9 @@
   .main-content
     :padding 15px
     :min-height 650px
+    :background-image url(/images/structure/bg-silouhette.png)
+    :background-repeat no-repeat
+    :background-position 750px 50px
     .facebook
       :position absolute
       :top 600px
@@ -44,7 +47,7 @@
       :margin-left 200px
     .main-logo
       :top 0px
-      :left 585px
+      :left 515px
       :position relative
     .content
       :position relative
