--- a/app/views/tour_dates/show.haml
+++ b/app/views/tour_dates/show.haml
@@ -18,7 +18,7 @@
   = @tour_date.price_ahead
 %p
   Tickets @ Door:
-  = @tour_date.price_ahead
+  = @tour_date.price_door
 %p= nl2br @tour_date.description
 
 
